# HsSPE

./: HsSPE.cabal  LICENSE  README
Data/Phonology/: Features.hs  Representations.hs  RuleApplication.hs  RuleParsers.hs  Rules.hs  Syllables.hs  Tests.hs
datafiles/: DiacriticFeatures.org  SegmentFeatures.org  diacritics2hs.py  segments2hs.py
